
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned int ARRAY_SIZE (scalar_t__*) ;
 int ITypeInfo_Release (scalar_t__) ;
 int ITypeLib_Release (int ) ;
 scalar_t__* typeinfos ;
 int typelib ;

__attribute__((used)) static void release_typelib(void)
{
    unsigned i;

    if(!typelib)
        return;

    for(i = 0; i < ARRAY_SIZE(typeinfos); i++) {
        if(typeinfos[i])
            ITypeInfo_Release(typeinfos[i]);
    }

    ITypeLib_Release(typelib);
}
