; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/vbscript/extr_vbscript_main.c_release_typelib.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/vbscript/extr_vbscript_main.c_release_typelib.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@typelib = common dso_local global i32 0, align 4
@typeinfos = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @release_typelib to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_typelib() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @typelib, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %32

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %6

6:                                                ; preds = %26, %5
  %7 = load i32, i32* %1, align 4
  %8 = load i64*, i64** @typeinfos, align 8
  %9 = call i32 @ARRAY_SIZE(i64* %8)
  %10 = icmp ult i32 %7, %9
  br i1 %10, label %11, label %29

11:                                               ; preds = %6
  %12 = load i64*, i64** @typeinfos, align 8
  %13 = load i32, i32* %1, align 4
  %14 = zext i32 %13 to i64
  %15 = getelementptr inbounds i64, i64* %12, i64 %14
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %11
  %19 = load i64*, i64** @typeinfos, align 8
  %20 = load i32, i32* %1, align 4
  %21 = zext i32 %20 to i64
  %22 = getelementptr inbounds i64, i64* %19, i64 %21
  %23 = load i64, i64* %22, align 8
  %24 = call i32 @ITypeInfo_Release(i64 %23)
  br label %25

25:                                               ; preds = %18, %11
  br label %26

26:                                               ; preds = %25
  %27 = load i32, i32* %1, align 4
  %28 = add i32 %27, 1
  store i32 %28, i32* %1, align 4
  br label %6

29:                                               ; preds = %6
  %30 = load i32, i32* @typelib, align 4
  %31 = call i32 @ITypeLib_Release(i32 %30)
  br label %32

32:                                               ; preds = %29, %4
  ret void
}

declare dso_local i32 @ARRAY_SIZE(i64*) #1

declare dso_local i32 @ITypeInfo_Release(i64) #1

declare dso_local i32 @ITypeLib_Release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
